# rt-gaussian-splat-renderer

./: .gitignore  .nvim.lua  README.md  flake.nix  pyproject.toml
.github/workflows/: build_deploy_docs.yml  run_pytest.yml
docs/source/: api.md  conf.py  get-started.md  index.md
docs/source/_static/: gaussian-splatting.excalidraw
docs/source/apidocs/: index.rst
docs/source/apidocs/rt_gaussian_splat_renderer/: rt_gaussian_splat_renderer.__main__.rst  rt_gaussian_splat_renderer.camera.rst  rt_gaussian_splat_renderer.ray.rst  rt_gaussian_splat_renderer.rst
docs/source/notes/: coordinate-system.md  index.md  quaternion.md  spherical-harmonics.md
docs/source/technical-blogs/: fast-gpu-parallel-bvh.md  index.md  quaternion.md  spherical-harmonics.md
notebooks/: point_cloud_playground.ipynb  taichi-cuda.ipynb
src/rt_gaussian_splat_renderer/: __init__.py  __main__.py  camera.py  gaussian.py  ray.py  scene.py
src/rt_gaussian_splat_renderer/utils/: __init__.py  math.py  quaternion.py
src/rtgs/: __init__.py  __main__.py  bounding_box.py  bvh.py  camera.py  gaussian.py  rasterizer.py  ray.py  ray_tracer.py  scene.py  solver.py
src/rtgs/utils/: __init__.py  quaternion.py  ti_math.py  types.py
tests/: test_gaussian.py  test_quaternion.py  test_ray.py  test_scene.py
tests/data/: test.ply
