[project]
name = "rt-gaussian-splat-renderer"
version = "0.1.0"
description = "Implementation of 3D Gaussian Ray Tracing: Fast Tracing of Particle Scenes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "taichi>=1.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
