[project]
name = "rt-gaussian-splat-renderer"
version = "0.1.0"
description = "Implementation of 3D Gaussian Ray Tracing: Fast Tracing of Particle Scenes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "taichi>=1.7.3",
    "watchfiles>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "sphinx>=8.2.1",
    "sphinx-autodoc2>=0.5.0",
    "myst-parser[linkify]>=4.0.1",
    "taskipy>=1.14.1",
    "furo>=2024.8.6",
    "pytest>=8.3.4",
]

[tool.pyright]
reportInvalidTypeForm = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false

[tool.taskipy.tasks]
docs = "task docs-build & task docs-host && kill $!"
docs-build = "watchfiles 'make -C docs/ html' docs/source src"
docs-host = "python -m http.server 8080 -d docs/build/html"
