[project]
name = "rtgs"
version = "0.1.0"
description = "Implementation of 3D Gaussian Ray Tracing: Fast Tracing of Particle Scenes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "numpy-quaternion>=2024.0.7",
    "pandas>=2.2.3",
    "pyntcloud>=0.3.1",
    "pyvista[all]>=0.44.2",
    "taichi>=1.7.3",
    "tqdm>=4.67.1",
    "watchfiles>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "sphinx>=8.2.1",
    "sphinx-autodoc2>=0.5.0",
    "myst-parser[linkify]>=4.0.1",
    "taskipy>=1.14.1",
    "furo>=2024.8.6",
    "pytest>=8.3.4",
    "autopep8>=2.3.2",
    "jupyterlab>=4.3.5",
    "ipywidgets>=8.1.5",
    "debugpy>=1.8.12",
]

[tool.pyright]
reportInvalidTypeForm = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false

[tool.autopep8]
max_line_length = 80
aggressive = 3

[tool.taskipy.tasks]
docs = "task docs-build & task docs-host && kill $!"
docs-build = "watchfiles 'make -C docs/ html' docs/source src"
docs-host = "python -m http.server 8080 -d docs/build/html"

[project.scripts]
start = "rtgs.__main__:main"
